Add HMAC validation
