# docs/swagger.json
@@ -25,6 +25,13 @@
                 "operationId": "create account",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "X-Authorization-Sign",
+                        "name": "X-Authorization-Sign",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "Account",
                         "name": "account",
                         "in": "body",
@@ -71,6 +78,13 @@
                 "summary": "Deposit Money",
                 "operationId": "deposit money",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "X-Authorization-Sign",
+                        "name": "X-Authorization-Sign",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "Deposit",
                         "name": "deposit",
@@ -119,6 +133,13 @@
                 "operationId": "transfer money",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "X-Authorization-Sign",
+                        "name": "X-Authorization-Sign",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "Transfer",
                         "name": "transfer",
                         "in": "body",
@@ -162,6 +183,13 @@
                 "summary": "Withdraw Money",
                 "operationId": "withdraw money",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "X-Authorization-Sign",
+                        "name": "X-Authorization-Sign",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "Withdraw",
                         "name": "withdraw",
@@ -210,6 +238,13 @@
                 "operationId": "create user",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "X-Authorization-Sign",
+                        "name": "X-Authorization-Sign",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "User",
                         "name": "user",
                         "in": "body",
@@ -256,6 +291,13 @@
                 "summary": "Get Accounts",
                 "operationId": "get accounts",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "X-Authorization-Sign",
+                        "name": "X-Authorization-Sign",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "default": "srecko@gmail.com",
