# internal/server/api/v1/user_handler.go
@@ -23,6 +23,7 @@ func RegisterUser(v1 *gin.RouterGroup) {
 // @ID create user
 // @Accept  json
 // @Produce  json
+// @Param X-Authorization-Sign header string true "X-Authorization-Sign"
 // @Param user body model.User true "User" default({"first_name":"srecko", "last_name":"asdas", "email":"srecko@gmail.com", "address":"asdasd"})
 // @Success 200 {object} model.User "ok"
 // @Failure 400 {string} string "Bad Request"
@@ -61,6 +62,7 @@ func createUser(c *gin.Context) {
 // @ID get accounts
 // @Accept  json
 // @Produce  json
+// @Param X-Authorization-Sign header string true "X-Authorization-Sign"
 // @Param email path string true "User Email" default(srecko@gmail.com)
 // @Success 200 {object} model.User "ok"
 // @Failure 400 {string} string "Bad Request"
