# internal/server/server.go
@@ -1,9 +1,11 @@
 package server
 
 import (
+	"bytes"
 	"github.com/GGmaz/wallet-arringo/config"
 	"github.com/GGmaz/wallet-arringo/docs"
 	"github.com/GGmaz/wallet-arringo/internal/db"
+	"github.com/GGmaz/wallet-arringo/internal/helper"
 	"github.com/GGmaz/wallet-arringo/internal/scheduler"
 	v1 "github.com/GGmaz/wallet-arringo/internal/server/api"
 	"github.com/gin-gonic/gin"
@@ -11,7 +13,9 @@ import (
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 	"gorm.io/gorm"
+	"io"
 	"log"
+	"net/http"
 )
 
 type Server struct {
@@ -33,6 +37,46 @@ func redisMiddleware(redisClient *redis.Client) gin.HandlerFunc {
 	}
 }
 
+func hmacValidationMiddleware(secretKey string) gin.HandlerFunc {
+	return func(c *gin.Context) {
+		// check if request url starts with /swagger
+		if c.Request.URL.Path[:len("/swagger")] == "/swagger" {
+			c.Next()
+			return
+		}
+
+		// Read request body
+		body, err := io.ReadAll(c.Request.Body)
+		if err != nil {
+			c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"error": "Internal Server Error"})
+			return
+		}
+		defer c.Request.Body.Close()
+
+		// Calculate hash of the request body
+		calculatedHash := helper.Sha512HmacHash(body, secretKey)
+
+		// Retrieve hash from the header
+		receivedHash := c.GetHeader("X-Authorization-Sign")
+		if receivedHash == "" {
+			c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"error": "Missing X-Authorization-Sign header"})
+			return
+		}
+
+		// Compare calculated hash with received hash
+		if calculatedHash != receivedHash {
+			c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"error": "Hash verification failed"})
+			return
+		}
+
+		// Set the request body reader back for further processing
+		c.Request.Body = io.NopCloser(bytes.NewReader(body))
+
+		// Continue processing the request
+		c.Next()
+	}
+}
+
 func NewServer(config *config.Config) *Server {
 	return &Server{
 		config: config,
@@ -42,7 +86,6 @@ func NewServer(config *config.Config) *Server {
 // @title e-wallet API
 // @version 1.0
 // @description This is a project for Arringo company.
-
 // @host localhost:8082
 // @BasePath /api/v1
 func (server *Server) Start() {
@@ -63,7 +106,7 @@ func (server *Server) Start() {
 
 	// Recovery middleware recovers from any panics and writes a 500 if there was one.
 	r.Use(gin.Recovery())
-	r.Use(pgMiddleware(gormDB), redisMiddleware(redisClient))
+	r.Use(pgMiddleware(gormDB), redisMiddleware(redisClient), hmacValidationMiddleware(server.config.SecretKey))
 	r.Use(CORSMiddleware())
 
 	v1.RegisterVersion(r)
